--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+
    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Major+Mono+Display" rel="stylesheet">
     <title>Madeleine's Blog</title>
 </head>
@@ -11,7 +12,11 @@
    <div class="page-header">
        {% if user.is_authenticated %}
        <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+           <p><a href="{% url 'logout' %}">logout</a></p>
+       {% else %}
+           <a href="{% url 'login' %}">login</a>
        {% endif %}
+
        <h1><a href="/">Madeleine's Blog</a></h1>
     </div>
     <div class="content container">
